# Raiznet

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  README.md  RUST_MIGRATION_PLAN.md  Raiznet.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: deploy-docs.yml  deploy-website.yml
apps/dashboard/: index.html  package.json
apps/dashboard/src/: main.jsx  styles.css
apps/dashboard/src/i18n/: index.js  pt-BR.js
apps/prototype/: .design-canvas.state.json  Raiznet - Telas.html  design-canvas.jsx  glyphs.jsx  index.html  main.jsx  package.json  screens-esp.jsx  screens-server-1.jsx  screens-server-2.jsx  screens-server-3.jsx  tokens.css  tweaks-panel.jsx
apps/raiznetd/: Cargo.toml
apps/raiznetd/src/: config.rs  identity.rs  lib.rs  main.rs
apps/raiznetd/src/domain/: errors.rs  mod.rs  telemetry.rs
apps/raiznetd/src/http/: devices.rs  health.rs  mod.rs  telemetry.rs
apps/raiznetd/tests/: corpus.rs
apps/server/: .env.example  package.json
apps/server/src/: config.ts  identity.ts  index.ts
apps/server/src/domain/: errors.ts  telemetry.test.ts  telemetry.ts
apps/server/src/http/: health.ts
apps/server/src/http/public/: devices.test.ts  devices.ts  telemetry.test.ts  telemetry.ts
apps/server/src/storage/: private-db.ts  public-db.ts
apps/website/: .env.production  SEO_SPEC.md  index.html  package.json  screens-landing-carousel.jsx
apps/website/public/: manifest.webmanifest
apps/website/scripts/: prerender.mjs  validate-seo.mjs
apps/website/src/: main.jsx  prerender.jsx  styles.css
apps/website/src/i18n/: en-US.js  es-ES.js  index.js  ja-JP.js  pt-BR.js  zh-CN.js
apps/website/src/lib/: i18n-routing.js  seo.jsx
crates/raiznet-crypto/: Cargo.toml
crates/raiznet-crypto/src/: identity.rs  lib.rs  signing.rs  symmetric.rs
crates/raiznet-store/: Cargo.toml
crates/raiznet-store/src/: devices.rs  lib.rs  schema.rs  telemetry.rs
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/adr/: 001-protobuf.md  002-sqlite-cache.md  003-privacy-model.md  004-raiznet-native-replication.md
docs/guide/: architecture.md  intelligence.md  introduction.md  roadmap.md  running-a-node.md  stack.md
docs/ja/: index.md
docs/protocol/: device-lifecycle.md  identity.md  networks.md  overview.md  privacy.md  telemetry.md
docs/reference/: errors.md  glossary.md  local-api.md  proto-schemas.md  public-api.md
estudo-rust/: 01-cargo-e-workspace.md  02-ownership-e-emprestimo.md  03-structs-enums-option.md  04-erros-e-result.md  05-traits-e-derive.md  06-async-tokio-axum.md  07-testes.md  README.md
firmware/safraSense/: IMPLEMENTATION_NOTES.md  PORTAL_IDENTITY_NOTES.md  platformio.ini
firmware/safraSense/include/: config.h
firmware/safraSense/src/: main.cpp
firmware/safraSense/src/buttons/: buttons.cpp  buttons.h
firmware/safraSense/src/device/: device.cpp  device.h
firmware/safraSense/src/docs/: docs.cpp  docs.h
firmware/safraSense/src/http_local/: http_local.cpp  http_local.h
firmware/safraSense/src/i18n/: i18n.cpp  i18n.h
firmware/safraSense/src/identity/: identity.cpp  identity.h  qr_decode.cpp  wordlists.cpp
firmware/safraSense/src/leds/: leds.cpp  leds.h
firmware/safraSense/src/sensors/: sensors.cpp  sensors.h
firmware/safraSense/src/storage/: storage.cpp  storage.h
firmware/safraSense/src/telemetry/: buffer.cpp  buffer.h  telemetry.cpp  telemetry.h
firmware/safraSense/src/wifi_setup/: wifi_setup.cpp  wifi_setup.h
test-fixtures/: generate.mjs
test-fixtures/devices/: register-ok.json
test-fixtures/expected-http/: register-duplicate.json  register-ok.json  telemetry-bad-signature.json  telemetry-ok.json  telemetry-tampered-plain.json  telemetry-unknown-device.json
test-fixtures/expected-sqlite/: telemetry-ok.json
test-fixtures/identity/: vectors.json
test-fixtures/telemetry/: post-bad-signature.json  post-ok.json  post-tampered-plain.json
