# raiznetd — o binário do nó Raiznet em Rust.
# Substitui o servidor TypeScript (apps/server, congelado como referência)
# com paridade de comportamento. Ver RUST_MIGRATION_PLAN.md.
[package]
name = "raiznetd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
